# fight-detection-system-main

./: .gitignore  README.md  app.py  requirements.txt
components/: alert_box.py  incident_cards.py
cpp_demo/: CMakeLists.txt  README.md
cpp_demo/scripts/: orangepi_aipro.env  orangepi_aipro.env.example  orangepi_build_and_run.sh  wsl_build_onnx.sh  wsl_run_onnx_demo.sh
cpp_demo/src/: inference_core.cpp  inference_core.h
deploy/: DEPLOY_README.md  README_NPU.md  SETUP.md  dashboard.py  install_deps_orangepi.sh  stream_video.py
deploy/cpp_demo/: CANNExecutionProvider_main_graph_10634842436718061767_0_0_10178984897996069.om  CANNExecutionProvider_main_graph_10634842436718061767_1_1_5904916893606242557.om  CANNExecutionProvider_main_graph_10634842436718061767_2_2_6069955237460286631.om  README.md
deploy/cpp_demo/scripts/: check_cann_env.sh  orangepi_aipro.env  orangepi_aipro.env.example  orangepi_build_and_run.sh
deploy/cpp_demo/src/: inference_core.cpp  inference_core.h  main.cpp
deploy/models/: version3.onnx
docs/: LOCAL_DEVELOPMENT_GUIDE.md  ORANGEPI_AI_PRO_DEPLOYMENT_GUIDE.md  PROJECT_OVERVIEW.md
docs/notes/: deployment_breadth_first_notes.md  inference_refactor_notes.md  presentation_outline.md  student_project_checklist.md
models/: version3.ckpt  version3.mindir  version3_torch.pt
models/training/: dataset_loader.py  export_inference_mindir.py  train_model.py  train_torch_onnx.py
src/: check_onnx.py  compare_feature_csv.py  compare_pose_debug_json.py  export_pose_debug.py  export_video_features.py  inference_core.py  predictions.py  run_inference.py
utills/: data_preprocessing.py  frame_to_keypoits.py  session_utill.py
